[gd_scene load_steps=13 format=3 uid="uid://dgvbcmyrls7o6"]

[ext_resource type="Texture2D" uid="uid://cs00uo6gf5n46" path="res://icon.svg" id="1_ayfg3"]
[ext_resource type="Script" uid="uid://bq7clnqdofkpf" path="res://Scripts/boss.gd" id="1_p1f3m"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p1f3m"]
size = Vector2(26.6751, 169.005)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fdynt"]
size = Vector2(13.5, 35)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5afma"]
size = Vector2(47, 82)

[sub_resource type="Animation" id="Animation_p1f3m"]
resource_name = "Idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Icon2:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.647782, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Icon3:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.53, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-0.309963, 0.0740407, -0.309963]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Icon2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(4, -7)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Icon3:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -11)]
}

[sub_resource type="Animation" id="Animation_5afma"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Icon2:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Icon3:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.309963]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Icon2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(4, -7)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Icon3:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-57, -64)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Icon:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_fdynt"]
resource_name = "Attack1"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Icon2:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.766667, 1.73, 1.93, 2.75),
"transitions": PackedFloat32Array(1, 2.37841, 2.37841, 1, 1),
"update": 0,
"values": [0.0, 0.617376, 0.617376, 0.00747305, 0.00747305]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Icon2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.766667, 1.73, 1.93, 2.75, 5),
"transitions": PackedFloat32Array(1, 2.37841, 2.37841, 1, 1, 1),
"update": 0,
"values": [Vector2(4, -7), Vector2(-70, -70), Vector2(-70, -70), Vector2(-89, -9.99999), Vector2(-89, -9.99999), Vector2(-7.62939e-06, -9.99999)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.96667, 5),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"check_player"
}, {
"args": [],
"method": &"initialize_idle"
}]
}

[sub_resource type="Animation" id="Animation_lufdo"]
resource_name = "Attack2"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Icon2:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.766667, 1, 1.13333, 1.25, 1.4, 1.51667, 1.65, 1.76667, 1.92, 2.03667, 2.52709),
"transitions": PackedFloat32Array(1, 2.37841, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.617376, 0.117269, 0.0, 0.117269, 0.0, 0.117269, 0.0, 0.117269, 0.0, 0.117269, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Icon2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.766667, 1, 1.13333, 1.25, 1.4, 1.51667, 1.65, 1.76667, 1.92, 2.03667, 2.52709, 4.01),
"transitions": PackedFloat32Array(1, 2.37841, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(4, -7), Vector2(-70, -70), Vector2(-63, -20), Vector2(-54, -8), Vector2(-63, -20), Vector2(-54, -8), Vector2(-63, -20), Vector2(-54, -8), Vector2(-63, -20), Vector2(-54, -8), Vector2(-63, -20), Vector2(-58, -10), Vector2(0, -10)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Icon3:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.766667, 1, 1.13333, 1.25, 1.4, 1.51667, 1.65, 1.76667, 1.92, 2.03667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [-0.309963, 0.994838, 0.0, 0.271719, 0.0, 0.271719, 0.0, 0.271719, 0.0, 0.271719, 0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Icon3:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.766667, 1, 1.13333, 1.25, 1.4, 1.51667, 1.65, 1.76667, 1.92, 2.03333, 2.52709, 4.01),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-57, -64), Vector2(-58, -10), Vector2(-56, -17), Vector2(-58, -10), Vector2(-56, -17), Vector2(-58, -10), Vector2(-56, -17), Vector2(-58, -10), Vector2(-56, -17), Vector2(-58, -10), Vector2(-58, -10), Vector2(0, -11)]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(1.03333, 1.23, 1.55, 1.93333, 2.06, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"values": [{
"args": [],
"method": &"check_player"
}, {
"args": [],
"method": &"check_player"
}, {
"args": [],
"method": &"check_player"
}, {
"args": [],
"method": &"check_player"
}, {
"args": [],
"method": &"check_player"
}, {
"args": [],
"method": &"initialize_idle"
}]
}

[sub_resource type="Animation" id="Animation_5e2h8"]
resource_name = "Hit"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Icon:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.665604, 1.96133e-06, 4.33177e-07, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.266667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"initialize_idle"
}]
}

[sub_resource type="Animation" id="Animation_nrsbc"]
resource_name = "Attack3"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Icon2:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Icon2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(4, -7), Vector2(-7.62939e-06, -9.99999)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(2.46667, 2.62985, 2.80517, 2.9, 3.01237, 4.96667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"values": [{
"args": [],
"method": &"check_player"
}, {
"args": [],
"method": &"check_player"
}, {
"args": [],
"method": &"check_player"
}, {
"args": [],
"method": &"check_player"
}, {
"args": [],
"method": &"check_player"
}, {
"args": [],
"method": &"initialize_idle"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Icon3:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.988185, 2.34296, 2.61391, 3.52289, 3.85711, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(5, -8), Vector2(5, -8), Vector2(5, -27), Vector2(-119, -27), Vector2(-119, -27), Vector2(-104, -9), Vector2(0, -9)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Icon3:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fdynt"]
_data = {
&"Attack1": SubResource("Animation_fdynt"),
&"Attack2": SubResource("Animation_lufdo"),
&"Attack3": SubResource("Animation_nrsbc"),
&"Hit": SubResource("Animation_5e2h8"),
&"Idle": SubResource("Animation_p1f3m"),
&"RESET": SubResource("Animation_5afma")
}

[node name="Boss" type="CharacterBody2D" groups=["Boss"]]
collision_mask = 17
script = ExtResource("1_p1f3m")
PUSH_FORCE = 190

[node name="Icon" type="Sprite2D" parent="."]
position = Vector2(0, -41.3478)
scale = Vector2(0.36413, 0.650815)
texture = ExtResource("1_ayfg3")

[node name="Icon2" type="Sprite2D" parent="."]
position = Vector2(4, -7)
scale = Vector2(1.58118, 0.140146)
texture = ExtResource("1_ayfg3")

[node name="HurtBox" type="Area2D" parent="Icon2"]
position = Vector2(-51.8633, -2.76279)
collision_mask = 17

[node name="CollisionShape2D" type="CollisionShape2D" parent="Icon2/HurtBox"]
scale = Vector2(1, 1)
shape = SubResource("RectangleShape2D_p1f3m")
debug_color = Color(0.953282, 0.21775, 0, 0.42)

[node name="StaticBody2D" type="StaticBody2D" parent="Icon2"]
collision_layer = 128
collision_mask = 32

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Icon2/StaticBody2D"]
position = Vector2(-52.4925, -7.13538)
rotation = -1.5708
scale = Vector2(7.1354, 0.632439)
shape = SubResource("RectangleShape2D_fdynt")

[node name="Icon3" type="Sprite2D" parent="."]
position = Vector2(-57, -64)
rotation = -0.309963
scale = Vector2(1.58118, 0.140146)
texture = ExtResource("1_ayfg3")

[node name="StaticBody2D" type="StaticBody2D" parent="Icon3"]
position = Vector2(-0.662365, 6.78098)
rotation = 0.0841162
scale = Vector2(1.00352, 0.999972)
skew = -0.0834539
collision_layer = 128
collision_mask = 32

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Icon3/StaticBody2D"]
position = Vector2(-52.4925, -7.13538)
rotation = -1.5708
scale = Vector2(7.1354, 0.632439)
shape = SubResource("RectangleShape2D_fdynt")

[node name="HurtBox" type="Area2D" parent="Icon3"]
position = Vector2(-51.86, -7.13547)
rotation = 0.0841162
scale = Vector2(1.00352, 0.999972)
skew = -0.0834539
collision_mask = 17

[node name="CollisionShape2D" type="CollisionShape2D" parent="Icon3/HurtBox"]
scale = Vector2(1, 1)
shape = SubResource("RectangleShape2D_p1f3m")
debug_color = Color(0.953282, 0.21775, 0, 0.42)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, -41)
shape = SubResource("RectangleShape2D_5afma")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_fdynt")
}
autoplay = "Idle"

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
